--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
   "require": {
     "php": ">=8.1",
     "ext-json": "*",
-    "ext-openssl": "*"
+    "ext-openssl": "*",
+    "guzzlehttp/guzzle": "^7"
   },
   "autoload": {
     "psr-4": {
